--- a/bug_tracking/buglist/templates/buglist/index.html
+++ b/bug_tracking/buglist/templates/buglist/index.html
@@ -111,6 +111,8 @@
 
     </nav>
 
+    <!--Hola-->
+
     <section class="home">
         <div class="text">Lista de bugs</div>
         {% if latest_bug_list %}
