Arreglo de bugs
Se arregló un bug que no se podian enviar reportes, y luego un bug que no se podian enviar reportes con correos antiguos.

--- a/bug_tracking/home/templates/home/reporte_bug.html
+++ b/bug_tracking/home/templates/home/reporte_bug.html
@@ -5,7 +5,8 @@
   <form method="post">
     <!-- csrf es para proteccion contra crost site request forgeries -->
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form_bug.as_p }}
+    {{ form_usuario.as_p }}
     
     <button type="submit">Enviar reporte</button>
   </form>
