--- a/bug_tracking/buglist/templates/buglist/index.html
+++ b/bug_tracking/buglist/templates/buglist/index.html
@@ -15,7 +15,7 @@
     
     <title>Inicio</title> 
 </head>
-<body>
+<body onload="onload()">
     <nav class="sidebar close">
         <header>
             <div class="image-text">
