--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -57,7 +57,7 @@
 
                     <li class="nav-link">
                         <a href="{% url 'report:reportar_bug' %}">
-                            <i class='bx bx-bell icon' ></i>
+                            <i class='bx bx-bug icon' ></i>
                             <span class="text nav-text">Reportar bug</span>
                         </a>
                     </li>
