Revert "Merge branch 'main' into Miguel"
This reverts commit a23bc5510e16adc043725bf9e8b3ad51a6d8ee9f, reversing
changes made to 7396ce626f3f1593299410ba5e469ae7574e8e9f.

--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -15,8 +15,8 @@
     
     <title>Inicio</title> 
 </head>
-<body onload="onload()">
-    <nav class="sidebar">
+<body>
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
