--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -15,8 +15,8 @@
     
     <title>Inicio</title> 
 </head>
-<body>
-    <nav class="sidebar close">
+<body onload="onload()">
+    <nav class="sidebar">
         <header>
             <div class="image-text">
                 <span class="image">
