Bosquejo de inicio con efecto parallax

--- a/bug_tracking/staticfiles/css/style.css
+++ b/bug_tracking/staticfiles/css/style.css
@@ -341,3 +341,108 @@ body.dark .switch::before{
 body.dark .home .text{
     color: var(--text-color);
 }
+
+.container {
+    text-align: center;
+    color: var(--color);
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80);
+    background-size: cover;
+    background-position: center;
+    
+  /*  this is where the magic happens:  */
+    background-attachment: fixed;
+}
+
+.container h1 {
+    font-weight: 700;
+    font-size: 3rem;
+}
+  
+.container p {
+    max-width: 52ch;
+    line-height: 1.5;
+    padding: 1em;
+}
+  
+.container a {
+    display: inline-block;
+    padding: 1em 3.5em;
+    background-color: var(--primary-color);
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 0.3em;
+    font-weight: 700;
+    letter-spacing: .5px;
+    font-size: .875rem;
+}
+
+.container p{
+    color: var(--text-color);
+}
+.blank,
+.other {
+  width: 100%;
+  min-height: 60vh;
+  background-color: var(--color);
+}
+
+.second {
+    background-image:url(https://images.unsplash.com/photo-1514496959998-c01c40915c5f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+    background-attachment: fixed;
+    height: 1200px;
+}
+
+.second text nav-text{
+    margin-top: 2em;
+}
+  
+.second  .card > a {
+    margin-bottom: 2em;
+  }
+  
+.second .item {
+    display: flex;
+    max-width: 320px;
+    background-color: var(--body-color);;
+    flex-direction: column;
+    align-items: center;
+    border-radius: .5em;
+    -webkit-box-shadow: 0px 29px 38px -15px rgba(0,0,0,0.43);
+    -moz-box-shadow: 0px 29px 38px -15px rgba(0,0,0,0.43);
+    box-shadow: 0px 29px 38px -15px rgba(0,0,0,0.43);
+  }
+  
+  .img {
+    width: 90%;
+    height: 200px;
+    background-color: lightgrey;
+    background-size: cover;
+    background-position: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-radius: .3em;;
+  }
+  
+  .img-first {
+    background-image: url(https://w0.peakpx.com/wallpaper/582/516/HD-wallpaper-linux-programmer-pixel-art-linux-computer-hacker-pixel-8-bit.jpg);
+  }
+  
+  .img-second {
+    background-image: url(https://preview.redd.it/1d11s820dgm91.gif?width=640&crop=smart&format=png8&s=a18429691d6b7fe12b301d21a292643b604e2679);
+  }
+  
+  .img-third {
+    background-image: url(https://preview.redd.it/newspaper-pixilart-is-the-software-i-use-and-an-online-v0-t3ccxihfxiia1.png?width=1080&crop=smart&auto=webp&v=enabled&s=d297b9d74d3e3601ef4817d84d61990de85f4f7f);
+  }
+  
+  .second {
+    flex-direction: row;
+    gap: 1.6em;
+  }
