--- a/bug_tracking/home/templates/home/index.html
+++ b/bug_tracking/home/templates/home/index.html
@@ -9,7 +9,7 @@
     
     <!----======== CSS ======== -->
     <link rel="stylesheet" href='{%static "css/style.css"%}'>
-    
+    <link rel="stylesheet" href='{%static "css/test.css"%}'>
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
@@ -112,38 +112,40 @@
     </nav>
 
     <section class="home">
-        <div class="text">Inicio</div>
-        <table class="table">
-            <thead>
-                <tr>
-                  <th>Rank</th>
-                  <th>Name</th>
-                  <th>Points</th>
-                  <th>Team</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Domenic</td>
-                  <td>88,110</td>
-                  <td>dcode</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Sally</td>
-                  <td>72,400</td>
-                  <td>Students</td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Nick</td>
-                  <td>52,300</td>
-                  <td>dcode</td>
-                </tr>
-              </tbody>
-        </table>
-
+        {% comment %} <div class="text">Inicio</div> {% endcomment %}
+        
+        <div class="container">
+            <div class="text">Inicio</div>
+            <p>Bienvenido a la plataforma de bugtrucking de IS2</p>
+            <a href="#">Registrarme</a>
+        </div>
+        <div class="blank"></div>
+        <div class="container second">
+            <div class="item">
+              <div class="img img-first"></div>
+              <div class="card">
+                <span class="text nav-text">Lista de bugs</span>
+                <p>Revisa todos los bugs en los que estamos trabajando</p>
+                <a href="#">Ir a la buglist</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="img img-second"></div>
+              <div class="card">
+                <span class="text nav-text">Reportar bug</span>
+                <p>Avísanos de un bug en alguno de los proyectos</p>
+                <a href="#">Reportar</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="img img-third"></div>
+              <div class="card">
+                <span class="text nav-text">Iniciar sesión</span>
+                <p>Inicia sesión para obtener más información sobre tus reportes</p>
+                <a href="#">Iniciar sesión</a>
+              </div>
+            </div>
+          </div>
 
     </section>
 
