--- a/bug_tracking/home/templates/home/index.html
+++ b/bug_tracking/home/templates/home/index.html
@@ -126,7 +126,7 @@
               <div class="card">
                 <span class="text nav-text">Lista de bugs</span>
                 <p>Revisa todos los bugs en los que estamos trabajando</p>
-                <a href="#">Ir a la buglist</a>
+                <a href="{% url 'home:buglist' %}">Ir a la buglist</a>
               </div>
             </div>
             <div class="item">
