Corrigo referencia a CSS

--- a/bug_tracking/home/templates/home/index.html
+++ b/bug_tracking/home/templates/home/index.html
@@ -9,7 +9,7 @@
     
     <!----======== CSS ======== -->
     <link rel="stylesheet" href='{%static "css/style.css"%}'>
-    <link rel="stylesheet" href='{%static "css/test.css"%}'>
+    <link rel="stylesheet" href='{%static "css/parallax.css"%}'>
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
