--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Inicio" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
     <link rel="stylesheet" href='{%static "css/style.css"%}'>
-    <link rel="stylesheet" href='{%static "css/parallax.css"%}'>
+    {% comment %} <link rel="stylesheet" href='{%static "css/parallax.css"%}'> {% endcomment %}
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
@@ -112,45 +112,13 @@
 
     <section class="home">
         {% comment %} <div class="text">Inicio</div> {% endcomment %}
-        
-        <div class="container">
-            <div class="text">Inicio</div>
-            <p>Bienvenido a la plataforma de bugtrucking de IS2</p>
-            <a href="#">Registrarme</a>
-        </div>
-        <div class="blank"></div>
-        <div class="container second">
-            <div class="item">
-              <div class="img img-first"></div>
-              <div class="card">
-                <span class="text nav-text">Lista de bugs</span>
-                <p>Revisa todos los bugs en los que estamos trabajando</p>
-                <a href="{% url 'buglist:bug_list' %}">Ir a la buglist</a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="img img-second"></div>
-              <div class="card">
-                <span class="text nav-text">Reportar bug</span>
-                <p>Avísanos de un bug en alguno de los proyectos</p>
-                <a href="{% url 'report:reportar_bug' %}">Reportar</a>
-              </div>
-            </div>
-            <div class="item">
-              <div class="img img-third"></div>
-              <div class="card">
-                <span class="text nav-text">Iniciar sesión</span>
-                <p>Inicia sesión para obtener más información sobre tus reportes</p>
-                <a href="#">Iniciar sesión</a>
-              </div>
-            </div>
-          </div>
 
     </section>
-
+    {% block content%}
+    {% endblock %}
 
     <script src={%static "js/script.js" %}></script>
-    {% block content %}{% endblock %}
+    
     
     </body>
 
