Arreglo reporte de bug
Se arreglo el codigo eliminado de reporte de bug

--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -43,6 +43,7 @@
     {% csrf_token %}
     {{ form_bug.as_p }}
     {{ form_usuario.as_p }}
+    {{ form_proyecto.as_p }}
     
     <button type="submit">Enviar reporte</button>
   </form>
