--- a/bug_tracking/staticfiles/css/style.css
+++ b/bug_tracking/staticfiles/css/style.css
@@ -22,18 +22,18 @@
     --tran-04: all 0.3s ease;
     --tran-05: all 0.3s ease;
 }
-
+    /* ===== Body ===== */
 body {
     min-height: 100vh;
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
-
+    /* ===== Transition between selection ===== */
 ::selection {
     background-color: var(--primary-color);
     color: #fff;
 }
-
+    /* ===== Body in dark mode ===== */
 body.dark {
     --body-color: #18191a;
     --sidebar-color: #242526;
@@ -44,9 +44,23 @@ body.dark {
     --shadow-box: rgba(240, 235, 235, 0.15);
 }
 
+
+h1 {
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 25px;
+    font-weight: 700;
+    color: var(--text-color);
+    padding: auto;
+}
+
 /* ===== Sidebar ===== */
 .sidebar {
     position: fixed;
+    flex: 1;
     top: 0;
     left: 0;
     height: 100%;
@@ -61,7 +75,6 @@ body.dark {
     width: 88px;
 }
 
-/* ===== Reusable code - Here ===== */
 .sidebar li {
     height: 50px;
     list-style: none;
@@ -296,7 +309,11 @@ body.dark .switch::before {
     left: 20px;
 }
 
+
+/* ===== Home ===== */
+
 .home {
+    flex: 1;
     position: absolute;
     top: 0;
     top: 0;
@@ -347,20 +364,22 @@ body.dark .switch::before {
 
 
 .sidebar.close~.home {
-    left: 78px;
+    left: 88px;
     height: 100vh;
-    width: calc(100% - 78px);
+    width: calc(100% - 88px);
 }
 
 body.dark .home .text {
     color: var(--text-color);
 }
 
-.container {
+/* ===== Start parallax effect  ===== */
+
+.parallax {
     text-align: center;
     color: var(--color);
     width: 100%;
-    min-height: 100vh;
+    min-height: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -368,23 +387,18 @@ body.dark .home .text {
     background-image: url(https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80);
     background-size: cover;
     background-position: center;
-
-    /*  this is where the magic happens:  */
     background-attachment: fixed;
 }
 
-.container h1 {
-    font-weight: 700;
-    font-size: 3rem;
-}
 
-.container p {
-    max-width: 52ch;
+
+.parallax p {
+    max-width: 60ch;
     line-height: 1.5;
     padding: 1em;
 }
 
-.container a {
+.parallax a {
     display: inline-block;
     padding: 1em 3.5em;
     background-color: var(--primary-color);
@@ -397,45 +411,76 @@ body.dark .home .text {
     font-size: .875rem;
 }
 
-.container p {
+.parallax p {
     color: var(--text-color);
 }
 
 .blank,
-.other {
+.other,
+.info-view {
     width: 100%;
-    min-height: 60vh;
+    height: 100vh;
     background-color: var(--color);
+    display: flex;
+    justify-content: space-around;
 }
+
+.info-view {
+    
+    flex-direction: row;
+    flex-flow: wrap;
+}
+
 
 .second {
     background-image: url(https://images.unsplash.com/photo-1514496959998-c01c40915c5f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
     background-attachment: fixed;
-    height: 1200px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: center;
+    gap: 1.6em;
+    
+}
+
+.second .item{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 310px;
+    height: 360px;
+    background-color: var(--body-color);
+    margin: 20px;
+    box-sizing: border-box;
+    border-radius: 0.4em;
+    -webkit-box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
+    -moz-box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
+    box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
+    
 }
 
 .second text nav-text {
-    margin-top: 2em;
+    margin-top: 3em;
+    text-align: center;
+    text-size-adjust: auto;
+    
 }
 
 .second .card>a {
     margin-bottom: 2em;
 }
 
-.second .item {
-    display: flex;
-    max-width: 320px;
-    background-color: var(--body-color);
-    ;
-    flex-direction: column;
-    align-items: center;
-    border-radius: .5em;
-    -webkit-box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
-    -moz-box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
-    box-shadow: 0px 29px 38px -15px rgba(0, 0, 0, 0.43);
+@media screen and (max-width<=1200) and (max-width>=300px)  {
+    .second .item{
+        width: 310px;
+        
+    }
 }
 
-.img {
+
+
+.parallax .img {
     width: 90%;
     height: 200px;
     background-color: lightgrey;
@@ -459,11 +504,9 @@ body.dark .home .text {
     background-image: url(https://preview.redd.it/newspaper-pixilart-is-the-software-i-use-and-an-online-v0-t3ccxihfxiia1.png?width=1080&crop=smart&auto=webp&v=enabled&s=d297b9d74d3e3601ef4817d84d61990de85f4f7f);
 }
 
-.second {
-    flex-direction: row;
-    gap: 1.6em;
 
-  }
+
+  /* ===== Report form page ===== */
 
   .container-form{
     text-align: center;
